<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:folding-cell="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <com.ramotion.foldingcell.FoldingCell

            android:id="@+id/folding_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            folding-cell:backSideColor="@color/colorLight"

            folding-cell:cameraHeight="30"
            >



            <FrameLayout
                android:id="@+id/cell_content_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone">

                <include
                    layout="@layout/aboutme_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/cell_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/profile"
                        app:civ_border_color="@color/colorPrimaryDark"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Najdere Joseph Terlien, 18"
                        android:textAlignment="center"
                        android:textColor="@color/HeaderText"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Android/Java developer"
                        android:textAlignment="center"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp" />
                </LinearLayout>

            </FrameLayout>
            ​
        </com.ramotion.foldingcell.FoldingCell>

        <com.ramotion.foldingcell.FoldingCell
            android:id="@+id/folding_cell_skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            folding-cell:backSideColor="@color/colorLight"

            android:clipChildren="false"
            android:clipToPadding="false"
            folding-cell:cameraHeight="30"
            >

            <FrameLayout
                android:id="@+id/cell_content_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone">

                <include
                    layout="@layout/skills_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/cell_title_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Skills"
                        android:textAlignment="center"
                        android:textColor="@color/HeaderText"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="90dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="Java"
                            android:textColor="@color/SecondaryText"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:background="@drawable/stroke_background">

                            <View
                                android:id="@+id/view4"
                                android:layout_width="240dp"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimaryDark" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="90dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="Kotlin"
                            android:textColor="@color/SecondaryText"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:background="@drawable/stroke_background">

                            <View
                                android:id="@+id/view5"
                                android:layout_width="180dp"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimaryDark" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="90dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="Flutter"
                            android:textColor="@color/SecondaryText"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:background="@drawable/stroke_background">

                            <View
                                android:id="@+id/view6"
                                android:layout_width="30dp"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimaryDark" />
                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>
        </com.ramotion.foldingcell.FoldingCell>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="510dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="My Apps"
                android:textAlignment="center"
                android:textColor="@color/HeaderText"
                android:textSize="18sp" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true" />
        </androidx.appcompat.widget.LinearLayoutCompat>





        <com.ramotion.foldingcell.FoldingCell

            android:id="@+id/folding_cell_renderings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            folding-cell:backSideColor="@color/colorLight"

            android:clipChildren="false"
            android:clipToPadding="false"
            folding-cell:cameraHeight="30"
            >



            <FrameLayout
                android:id="@+id/cell_content_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone">

                <include
                    layout="@layout/software_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/cell_title_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:padding="5dp">


                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Software"
                        android:textAlignment="center"
                        android:textColor="@color/HeaderText"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/renderings"
                        android:textAlignment="center"
                        android:textColor="@color/SecondaryText"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/androidstudiologo" />

                </LinearLayout>

            </FrameLayout>
            ​
        </com.ramotion.foldingcell.FoldingCell>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gallery"
                android:textAlignment="center"
                android:textColor="@color/HeaderText"
                android:textSize="18sp" />

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/ap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp" />
        </LinearLayout>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact"
                android:textAlignment="center"
                android:textColor="@color/HeaderText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/telefoon"
                android:textAlignment="center"
                android:textColor="@color/SecondaryText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/SecondaryText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adres"
                android:textAlignment="center"
                android:textColor="@color/SecondaryText"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    folding-cell:srcCompat="@drawable/linkedin" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/github_logo" />
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Made by: NJTstudios"
            android:textAlignment="center"
            android:textColor="@color/PrimaryText" />
    </LinearLayout>
</ScrollView>

